tests/traci/set_variable/TrafficLight/errors/invalid_phase_index/options.traci
--no-step-log --no-duration-log --net-file=net.net.xml -b 0 -e 200 -a input_additional.add.xml,input_additional2.add.xml

